Added aggregator statistics, just need to pass them back in a uniform manner now
Added additional information pages
Fixed the problem with the json on the europeana page not displaying correctly

--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,9 @@
 #Grails Metadata file
-#Wed Apr 10 13:47:10 BST 2013
+#Wed Oct 09 14:56:53 BST 2013
 app.grails.version=2.2.1
 app.name=ECKCore
 app.version=0.1
+plugins.jquery=1.8.3
 plugins.jquery-ui=1.8.24
+plugins.resources=1.2.RC2
 plugins.twitter-bootstrap=2.3.0
