--- a/.project
+++ b/.project
@@ -26,7 +26,7 @@
 		<link>
 			<name>.link_to_grails_plugins</name>
 			<type>2</type>
-			<locationURI>GRAILS_ROOT/2.2.1/projects/ECKCore/plugins</locationURI>
+			<location>C:/Users/Chas/.grails/2.2.1/projects/ECKCore/plugins</location>
 		</link>
 	</linkedResources>
 </projectDescription>
