--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,8 +3,8 @@ encoding//.link_to_grails_plugins/jquery-1.8.3/grails-app/i18n=UTF-8
 encoding//.link_to_grails_plugins/jquery-1.8.3/grails-app/i18n/messages.properties=UTF-8
 encoding//.link_to_grails_plugins/jquery-ui-1.8.24/grails-app/i18n=UTF-8
 encoding//.link_to_grails_plugins/jquery-ui-1.8.24/grails-app/i18n/messages.properties=UTF-8
-encoding//.link_to_grails_plugins/resources-1.2.RC2/grails-app/i18n=UTF-8
-encoding//.link_to_grails_plugins/resources-1.2.RC2/grails-app/i18n/messages.properties=UTF-8
+encoding//.link_to_grails_plugins/resources-1.2/grails-app/i18n=UTF-8
+encoding//.link_to_grails_plugins/resources-1.2/grails-app/i18n/messages.properties=UTF-8
 encoding//.link_to_grails_plugins/twitter-bootstrap-2.3.0/grails-app/i18n=UTF-8
 encoding//.link_to_grails_plugins/twitter-bootstrap-2.3.0/grails-app/i18n/messages.properties=UTF-8
 encoding//grails-app/i18n=UTF-8
