--- a/application.properties
+++ b/application.properties
@@ -1,9 +1,8 @@
 #Grails Metadata file
-#Wed Oct 09 14:56:53 BST 2013
-app.grails.version=2.2.1
+#Wed Jan 22 14:45:20 GMT 2014
+app.grails.version=2.3.5
 app.name=ECKCore
+app.servlet.version=2.5
 app.version=0.1
 plugins.jquery=1.8.3
-plugins.jquery-ui=1.8.24
-plugins.resources=1.2.RC2
-plugins.twitter-bootstrap=2.3.0
+plugins.resources=1.2
