--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     
     <groupId>k-int.com.EUInside</groupId>
     <artifactId>ECKCore</artifactId>
     <packaging>grails-app</packaging>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.1</version>
 
     <name>ECKCore</name>
     <description>ECKCore</description>
@@ -23,7 +21,7 @@
 		<connection>scm:git:git://github.com/k-int/ECKCore.git</connection>
 		<developerConnection>scm:git:https://github.com/k-int/ECKCore.git</developerConnection>
 		<url>https://github.com/k-int/ECKCore</url>
-		<tag>HEAD</tag>
+		<tag>ECKCore-0.1</tag>
 	</scm>
 
 	<distributionManagement>
@@ -290,7 +288,7 @@
     </dependencies>
 
     <build>
-        <pluginManagement/>
+        <pluginManagement />
 
         <plugins>
             <!-- Disables the Maven surefire plugin for Grails applications, as we have our own test runner -->
