Updated the version in the application properties
I was excluding more jars than I needed to for ECKClient

--- a/application.properties
+++ b/application.properties
@@ -1,8 +1,8 @@
 #Grails Metadata file
-#Wed Jan 22 14:45:20 GMT 2014
+#Tue Jan 28 11:08:18 GMT 2014
 app.grails.version=2.3.5
 app.name=ECKCore
 app.servlet.version=2.5
-app.version=0.1
+app.version=0.2-SNAPSHOT
 plugins.jquery=1.8.3
 plugins.resources=1.2
