We had a bit of a mismatch between UTF-8 and ISOxxx-1, hopefully these have now been resolved and we now deal completly in UTF-8

--- a/.settings/org.grails.ide.eclipse.core.prefs
+++ b/.settings/org.grails.ide.eclipse.core.prefs
@@ -1,3 +1,36 @@
 eclipse.preferences.version=1
 org.grails.ide.eclipse.core.org.grails.ide.eclipse.core.install.name=Grails 2.3.5
+org.grails.ide.eclipse.core.source.attachment-ECKClient-0.3-SNAPSHOT.jar=/ECKClient/src
+org.grails.ide.eclipse.core.source.attachment-grails-async-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-async-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-bootstrap-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-bootstrap-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-core-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-core-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-databinding-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-databinding-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-datastore-core-2.0.7.RELEASE.jar=E\:/Externals/grails-2.3.5/src/grails-datastore-core-2.0.7.RELEASE-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-datastore-gorm-2.0.7.RELEASE.jar=E\:/Externals/grails-2.3.5/src/grails-datastore-gorm-2.0.7.RELEASE-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-datastore-simple-2.0.7.RELEASE.jar=E\:/Externals/grails-2.3.5/src/grails-datastore-simple-2.0.7.RELEASE-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-docs-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-docs-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-gdoc-engine-1.0.1.jar=E\:/Externals/grails-2.3.5/src/grails-gdoc-engine-1.0.1-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-logging-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-logging-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-plugin-codecs-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-plugin-codecs-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-plugin-controllers-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-plugin-controllers-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-plugin-converters-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-plugin-converters-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-plugin-databinding-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-plugin-databinding-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-plugin-datasource-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-plugin-datasource-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-plugin-domain-class-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-plugin-domain-class-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-plugin-filters-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-plugin-filters-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-plugin-gsp-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-plugin-gsp-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-plugin-i18n-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-plugin-i18n-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-plugin-log4j-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-plugin-log4j-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-plugin-mimetypes-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-plugin-mimetypes-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-plugin-rest-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-plugin-rest-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-plugin-services-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-plugin-services-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-plugin-servlets-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-plugin-servlets-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-plugin-testing-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-plugin-testing-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-plugin-url-mappings-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-plugin-url-mappings-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-plugin-validation-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-plugin-validation-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-resources-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-resources-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-scripts-2.3.5.jar=E\:/Externals/grails-2.3.5/scripts
+org.grails.ide.eclipse.core.source.attachment-grails-spring-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-spring-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-test-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-test-2.3.5-sources.jar
+org.grails.ide.eclipse.core.source.attachment-grails-web-2.3.5.jar=E\:/Externals/grails-2.3.5/src/grails-web-2.3.5-sources.jar
 org.grails.ide.eclipse.core.use.default.install=false
