--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<groupId>com.k-int.EUInside</groupId>
 		<artifactId>ECKParentGrails</artifactId>
 		<version>0.2-SNAPSHOT</version>
+		<relativePath/>
 	</parent>
 
 	<scm>
