--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,6 @@
 		<groupId>com.k-int.EUInside</groupId>
 		<artifactId>ECKParentGrails</artifactId>
 		<version>0.2-SNAPSHOT</version>
-		<relativePath/>
 	</parent>
 
 	<scm>
@@ -24,6 +23,26 @@
 		<tag>HEAD</tag>
 	</scm>
 
+	<repositories>
+		<repository>
+			<id>k-int-releases-repo</id>
+			<name>k-int Snapshot Repository</name>
+			<url>http://nexus.k-int.com/content/repositories/releases/</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>
+
+		<repository>
+			<id>k-int-snapshot-repo</id>
+			<name>k-int Snapshot Repository</name>
+			<url>http://nexus.k-int.com/content/repositories/snapshots/</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
+	
     <build>
         <plugins>
             <plugin>
